--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-date-fns": "^2.0.1",
     "vuetify": "^2.2.34",
     "vuex": "^3.5.1"
   },
